# polymarket-eye

./: .gitignore  Cargo.toml  README.md
data/: config.toml
src/: config.rs  main.rs
src/db/: account.rs  constants.rs  database.rs  mod.rs
src/errors/: custom.rs
src/modules/: menu.rs  mod.rs
src/modules/bets/: events_monitor.rs  mod.rs  opposing.rs
src/modules/deposit/: mod.rs
src/modules/registration/: mod.rs
src/modules/sell/: mod.rs  sell_all.rs
src/modules/stats_check/: mod.rs  scraping.rs
src/modules/withdraw/: mod.rs
src/onchain/: client.rs  constants.rs  mod.rs  multicall.rs
src/onchain/types/: token.rs
src/polymarket/: api.rs  mod.rs  schemas.rs  typedefs.rs
src/polymarket/api/: mod.rs  typedefs.rs
src/polymarket/api/clob/: constants.rs  endpoints.rs  math.rs  mod.rs  order_builder.rs  schemas.rs  typedefs.rs
src/polymarket/api/events/: endpoints.rs  mod.rs  schemas.rs
src/polymarket/api/relayer/: common.rs  constants.rs  endpoints.rs  mod.rs  schemas.rs  signature_params.rs  tx_builder.rs
src/polymarket/api/user/: endpoints.rs  mod.rs  schemas.rs
src/registration/: mod.rs  seq.rs
src/utils/: common.rs  constants.rs  fetch.rs  files.rs  logger.rs  misc.rs  mod.rs  poly.rs
