[package]
name = "polymarket-eye"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.6", features = ["full"] }
alloy-signer = { version = "0.4.0", features = ["eip712"] }
alloy-signer-local = "0.4.0"
base64 = "0.22.1"
chrono = "0.4.38"
cookie = "0.18.1"
eyre = "0.6.12"
fake = "2.10.0"
hex = "0.4.3"
indexmap = "2.5.0"
indicatif = "0.17.8"
itertools = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
term_size = "0.3.2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
