[package]
name = "polymarket-eye"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.6", features = ["full", "json", "eip712"] }
alloy-chains = "0.1.36"
base64 = "0.22.1"
chrono = "0.4.38"
colored = "2.1.0"
const-hex = "1.13.1"
cookie = "0.18.1"
csv = "1.3.0"
dialoguer = "0.11.0"
eyre = "0.6.12"
fake = "2.10.0"
hmac = "0.12.1"
indexmap = "2.5.0"
indicatif = "0.17.8"
itertools = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
serde_with = "3.9.0"
sha2 = "0.10.8"
tabled = "0.16.0"
term_size = "0.3.2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
